
	Well, it would've worked just fine if not for a stupid typo. =P
	
-------------------------------------------------------------------------------
Thu Nov 16 16:27:09 PST 2000	Michael Jennings <mej@eterm.org>

	This time it really works.  No, I mean it this time.  Seriously.
	
-------------------------------------------------------------------------------
Fri Nov 24 18:53:13 PST 2000	Michael Jennings <mej@eterm.org>

	At the request of Snow-Man <sfrost@snowman.net>, I added the build
	date to the output of --version.  While I was at it, I also added the
	RCS ident strings.

	I also applied a patch from Sung-Hyun Nam <namsh@lgic.co.kr> that
	fixes XIM-related seg faults during clean-up.
	
-------------------------------------------------------------------------------
Fri Dec 29 14:39:09 PST 2000	Michael Jennings <mej@eterm.org>

	Moved the HAVE_SAVED_UIDS define into a configure option so that the
	FreeBSD folks will have an easier time with it.

	Fixed "make distcheck" which broke at some point.

	That X stuff in clean_exit() should only happen if we're debugging.
	Nobody but me should have to deal with those random hangs. :-)

	Added a patch for multibyte cursor support from Michael C. Wu
	<keichii@iteration.net> and Sung-Hyun Nam <namsh@lgic.co.kr>, along
	with some other FreeBSD-related patches from Mr. Wu.
	
-------------------------------------------------------------------------------
Tue Jan  2 18:28:57 PST 2001	Michael Jennings <mej@eterm.org>

	Applied a couple patches I'd overlooked in my inbox.  Sebastian
	Dransfeld <sebastid@stud.ntnu.no> added a config file option to
	duplicate the behavior of the --buttonbar command-line option.  He
	also updated the man page, something I usually put off until just
	before I do a release. :-)

	I also went back and redid the way Eterm does backquote execution to
	avoid a potential race condition.
	
-------------------------------------------------------------------------------